# fastdataframe

./: .mypy-output.txt  .pre-commit-config.yaml  CLAUDE.md  README.md  cursor_pydantic_fieldinfo_annotation_in.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: devcontainer.mdc  fastdataframe.mdc  just.mdc  pytest.mdc  python-polylith.mdc  python.mdc  uv.mdc
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
fastdataframe/core/: field_info.py
junit/: test-results-3.12.xml
openspec/: project.md
src/fastdataframe/: __init__.py  metadata.py  model.py
src/fastdataframe/core/: annotation.py  datatype.py  field.py  field_info.py  json_schema.py  metadata.py  model.py  types.py  types_helper.py  validation.py
src/fastdataframe/iceberg/: __init__.py  json_schema.py  model.py
src/fastdataframe/polars/: __init__.py  _cast_functions.py  _types.py  base.py  dataframe.py  datetime_format.py  lazyframe.py  model.py
tests/: __init__.py  conftest.py  test_metadata.py  test_model.py  test_models.py
tests/core/: test_datatype.py  test_field.py  test_metadata.py  test_model.py  test_types.py  test_types_helper.py
tests/core/pydantic/: test_field_info.py
tests/e2e/: __init__.py  conftest.py  test_iceberg_polars_integration.py
tests/iceberg/: test_json_schema.py  test_model.py  test_validation.py
tests/polars/: test_cast_functions.py  test_dataframe.py  test_datetime_format.py  test_lazyframe.py  test_model.py  test_validate.py  test_validation.py
tests/polars/files/: test1.csv  test2.csv  test3.csv  test4.csv  test5.csv
