[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastdataframe"
version = "0.0.1"
description = "A fast dataframe implementation with Pydantic integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0",
    "annotated-types>=0.5.0",
]

[project.optional-dependencies]
polars = [
    "polars>=1.29.0",
]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.9.0",
    "ruff>=0.11.10",
]

[tool.hatch.build]
packages = ["src/fastdataframe"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastdataframe"]

[tool.pytest.ini_options]
pythonpath = ["src/"]

