[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastdataframe"
version = "0.0.1"
description = "A fast dataframe implementation with Pydantic integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0.0",
    "annotated-types>=0.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
polars = [
    "polars>=1.26.0",
]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.9.0",
    "ruff>=0.11.10",
    "pytest-cov>=6.1.1",
    "isodate>=0.7.2",
]

[tool.hatch.build]
packages = ["src/fastdataframe"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastdataframe"]

[tool.pytest.ini_options]
pythonpath = ["src/"]

[[tool.mypy.overrides]]
module = [
    "isodate",
]
ignore_missing_imports = true

