[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project]
name = "fastdataframe"
version = "0.1.0"
description = "A fast dataframe implementation with Pydantic integration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3.0",
    "annotated-types>=0.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
polars = [
    "polars>=1.26.0",
]
iceberg = [
    "pyiceberg[pyarrow,sql-sqlite]>=0.9",
]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ty>=0.0.8",
    "ruff>=0.11.10",
    "pytest-cov>=6.1.1",
    "isodate>=0.7.2",
    "rich>=10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src/"]

